// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StageSelect adds expected options to select when language is DE 1`] = `
[
  {
    "name": "Abyssal-Museum",
    "value": "Shellendorf Institute",
  },
  {
    "name": "Anchobit Games HQ",
    "value": "Ancho-V Games",
  },
  {
    "name": "Arowana Center",
    "value": "Arowana Mall",
  },
  {
    "name": "Backfisch-Stadion",
    "value": "Goby Arena",
  },
  {
    "name": "Buckelwal-Piste",
    "value": "Humpback Pump Track",
  },
  {
    "name": "Camp Schützenfisch",
    "value": "Camp Triggerfish",
  },
  {
    "name": "Cetacea-Markt",
    "value": "MakoMart",
  },
  {
    "name": "Counterpick",
    "value": "Counterpick",
  },
  {
    "name": "Flunder-Funpark",
    "value": "Wahoo World",
  },
  {
    "name": "Grundel-Pavillon",
    "value": "Skipper Pavilion",
  },
  {
    "name": "Grätenkanal",
    "value": "Snapper Canal",
  },
  {
    "name": "Heilbutt-Hafen",
    "value": "Port Mackerel",
  },
  {
    "name": "Hotel Neothun",
    "value": "New Albacore Hotel",
  },
  {
    "name": "Kofferfisch-Lager",
    "value": "Walleye Warehouse",
  },
  {
    "name": "Korallenviertel",
    "value": "The Reef",
  },
  {
    "name": "Manta Maria",
    "value": "Manta Maria",
  },
  {
    "name": "Molluskelbude",
    "value": "Musselforge Fitness",
  },
  {
    "name": "Muränentürme",
    "value": "Moray Towers",
  },
  {
    "name": "Perlmutt-Akademie",
    "value": "Inkblot Art Academy",
  },
  {
    "name": "Punkasius-Skatepark",
    "value": "Blackbelly Skatepark",
  },
  {
    "name": "Seeigel-Rockbühne",
    "value": "Starfish Mainstage",
  },
  {
    "name": "Steinköhler-Grube",
    "value": "Piranha Pit",
  },
  {
    "name": "Störwerft",
    "value": "Sturgeon Shipyard",
  },
  {
    "name": "Tümmlerkuppel",
    "value": "Kelp Dome",
  },
  {
    "name": "Unbekannte Arena",
    "value": "Unknown Stage",
  },
  {
    "name": "Wandelzone",
    "value": "Shifty Station",
  },
]
`;

exports[`StageSelect adds expected options to select when language is EN 1`] = `
[
  {
    "name": "Ancho-V Games",
    "value": "Ancho-V Games",
  },
  {
    "name": "Arowana Mall",
    "value": "Arowana Mall",
  },
  {
    "name": "Blackbelly Skatepark",
    "value": "Blackbelly Skatepark",
  },
  {
    "name": "Camp Triggerfish",
    "value": "Camp Triggerfish",
  },
  {
    "name": "Counterpick",
    "value": "Counterpick",
  },
  {
    "name": "Goby Arena",
    "value": "Goby Arena",
  },
  {
    "name": "Humpback Pump Track",
    "value": "Humpback Pump Track",
  },
  {
    "name": "Inkblot Art Academy",
    "value": "Inkblot Art Academy",
  },
  {
    "name": "Kelp Dome",
    "value": "Kelp Dome",
  },
  {
    "name": "MakoMart",
    "value": "MakoMart",
  },
  {
    "name": "Manta Maria",
    "value": "Manta Maria",
  },
  {
    "name": "Moray Towers",
    "value": "Moray Towers",
  },
  {
    "name": "Musselforge Fitness",
    "value": "Musselforge Fitness",
  },
  {
    "name": "New Albacore Hotel",
    "value": "New Albacore Hotel",
  },
  {
    "name": "Piranha Pit",
    "value": "Piranha Pit",
  },
  {
    "name": "Port Mackerel",
    "value": "Port Mackerel",
  },
  {
    "name": "Shellendorf Institute",
    "value": "Shellendorf Institute",
  },
  {
    "name": "Shifty Station",
    "value": "Shifty Station",
  },
  {
    "name": "Skipper Pavilion",
    "value": "Skipper Pavilion",
  },
  {
    "name": "Snapper Canal",
    "value": "Snapper Canal",
  },
  {
    "name": "Starfish Mainstage",
    "value": "Starfish Mainstage",
  },
  {
    "name": "Sturgeon Shipyard",
    "value": "Sturgeon Shipyard",
  },
  {
    "name": "The Reef",
    "value": "The Reef",
  },
  {
    "name": "Unknown Stage",
    "value": "Unknown Stage",
  },
  {
    "name": "Wahoo World",
    "value": "Wahoo World",
  },
  {
    "name": "Walleye Warehouse",
    "value": "Walleye Warehouse",
  },
]
`;

exports[`StageSelect adds expected options to select when language is EU_FR 1`] = `
[
  {
    "name": "Allées salées",
    "value": "The Reef",
  },
  {
    "name": "Canalamar",
    "value": "Snapper Canal",
  },
  {
    "name": "Carrière Caviar",
    "value": "Piranha Pit",
  },
  {
    "name": "Centre Arowana",
    "value": "Arowana Mall",
  },
  {
    "name": "Chantier Narval",
    "value": "Sturgeon Shipyard",
  },
  {
    "name": "Counterpick",
    "value": "Counterpick",
  },
  {
    "name": "Docks Haddock",
    "value": "Port Mackerel",
  },
  {
    "name": "Encrepôt",
    "value": "Walleye Warehouse",
  },
  {
    "name": "Galerie des abysses",
    "value": "Shellendorf Institute",
  },
  {
    "name": "Gymnase Ancrage",
    "value": "Musselforge Fitness",
  },
  {
    "name": "Hippo-Camping",
    "value": "Camp Triggerfish",
  },
  {
    "name": "Hôtel Atoll",
    "value": "New Albacore Hotel",
  },
  {
    "name": "Institut Calam'arts",
    "value": "Inkblot Art Academy",
  },
  {
    "name": "Lagune aux gobies",
    "value": "Skipper Pavilion",
  },
  {
    "name": "Manta Maria",
    "value": "Manta Maria",
  },
  {
    "name": "Parc Carapince",
    "value": "Wahoo World",
  },
  {
    "name": "Piste Méroule",
    "value": "Humpback Pump Track",
  },
  {
    "name": "Plateforme polymorphe",
    "value": "Shifty Station",
  },
  {
    "name": "Scène Sirène",
    "value": "Starfish Mainstage",
  },
  {
    "name": "Serre Goémon",
    "value": "Kelp Dome",
  },
  {
    "name": "Skatepark Mako",
    "value": "Blackbelly Skatepark",
  },
  {
    "name": "Stade Bernique",
    "value": "Goby Arena",
  },
  {
    "name": "Stage à déterminer",
    "value": "Unknown Stage",
  },
  {
    "name": "Supermarché Cétacé",
    "value": "MakoMart",
  },
  {
    "name": "Tentatec Studio",
    "value": "Ancho-V Games",
  },
  {
    "name": "Tours Girelle",
    "value": "Moray Towers",
  },
]
`;

exports[`StageSelect adds expected options to select when language is JA 1`] = `
[
  {
    "name": "アジフライスタジアム",
    "value": "Goby Arena",
  },
  {
    "name": "アロワナモール",
    "value": "Arowana Mall",
  },
  {
    "name": "アンチョビットゲームズ",
    "value": "Ancho-V Games",
  },
  {
    "name": "エンガワ河川敷",
    "value": "Snapper Canal",
  },
  {
    "name": "カウンターピック",
    "value": "Counterpick",
  },
  {
    "name": "ガンガゼ野外音楽堂",
    "value": "Starfish Mainstage",
  },
  {
    "name": "コンブトラック",
    "value": "Humpback Pump Track",
  },
  {
    "name": "ザトウマーケット",
    "value": "MakoMart",
  },
  {
    "name": "ショッツル鉱山",
    "value": "Piranha Pit",
  },
  {
    "name": "ステージ未選択",
    "value": "Unknown Stage",
  },
  {
    "name": "スメーシーワールド",
    "value": "Wahoo World",
  },
  {
    "name": "タチウオパーキング",
    "value": "Moray Towers",
  },
  {
    "name": "チョウザメ造船",
    "value": "Sturgeon Shipyard",
  },
  {
    "name": "デボン海洋博物館",
    "value": "Shellendorf Institute",
  },
  {
    "name": "ハコフグ倉庫",
    "value": "Walleye Warehouse",
  },
  {
    "name": "バッテラストリート",
    "value": "The Reef",
  },
  {
    "name": "フジツボスポーツクラブ",
    "value": "Musselforge Fitness",
  },
  {
    "name": "ホッケふ頭",
    "value": "Port Mackerel",
  },
  {
    "name": "ホテルニューオートロ",
    "value": "New Albacore Hotel",
  },
  {
    "name": "マンタマリア号",
    "value": "Manta Maria",
  },
  {
    "name": "ミステリーゾーン",
    "value": "Shifty Station",
  },
  {
    "name": "ムツゴ楼",
    "value": "Skipper Pavilion",
  },
  {
    "name": "モズク農園",
    "value": "Kelp Dome",
  },
  {
    "name": "モンガラキャンプ場",
    "value": "Camp Triggerfish",
  },
  {
    "name": "海女美術大学",
    "value": "Inkblot Art Academy",
  },
  {
    "name": "Ｂバスパーク",
    "value": "Blackbelly Skatepark",
  },
]
`;
